sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value v
    while ((j>0)&&(getValeur(j-1)>v)){
                                  ^